<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_chat">

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.chatfirebase.view.ChatsFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chats" >
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.chatfirebase.view.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_new_group"
        android:name="com.example.chatfirebase.view.NewGroupFragment"
        android:label="@string/menu_new_groups"
        tools:layout="@layout/fragment_new_group" />

    <fragment
        android:id="@+id/nav_saved"
        android:name="com.example.chatfirebase.view.SavedFragment"
        android:label="@string/menu_saved"
        tools:layout="@layout/fragment_saved" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.chatfirebase.view.SettingsFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_settings" />
</navigation>