<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/black"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    android:popupTheme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_back"
        android:contentDescription="@string/back_button_desc" />

    <!-- Порожній простір для вирівнювання кнопок -->
    <View
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/btn_settings"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:background="@drawable/ic_more"
        android:contentDescription="@string/settings_button_desc" />

    <ImageButton
        android:id="@+id/btn_edit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:background="@drawable/ic_edit"
        android:contentDescription="@string/edit_button_desc" />


</androidx.appcompat.widget.Toolbar>
